--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -5,4 +5,5 @@
     <item android:id="@+id/menu_bell_tower" android:title="@string/bell_tower"/>
     <item android:id="@+id/menu_building_potion" android:title="@string/building_potion"/>
     <item android:id="@+id/menu_lab_potion" android:title="@string/lab_potion"/>
+    <item android:id="@+id/menu_bellTower_potion" android:title="@string/bellTower_potion"/>
 </menu>
